--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -145,12 +145,15 @@ jobs:
                   static_site_generator: next
             - name: Install dependencies
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+            - name: Modify files
+              run: ${{ steps.detect-package-manager.outputs.manager }} run change
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./out
+                  #   path: ./out
+                  path: ./.next
 
     deploy:
         environment:
