--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"resend": "^3.2.0",
 		"rmodal": "^1.1.0",
 		"serwist": "^9.0.3",
+		"sharp": "^0.33.4",
 		"signature_pad": "^5.0.1",
 		"slick-carousel": "^1.8.1",
 		"sortablejs": "^1.15.2",
