--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -323,14 +323,29 @@ jobs:
               with:
                   node-version: "20"
                   cache: ${{ steps.detect-package-manager.outputs.manager }}
+            # - name: Setup Pages
+            #   uses: actions/configure-pages@v5
+            #   with:
+            #       # Automatically inject basePath in your Next.js configuration file and disable
+            #       # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
+            #       #
+            #       # You may remove this line if you want to manage the configuration yourself.
+            #       static_site_generator: next
             - name: Setup Pages
-              uses: actions/configure-pages@v5
+              uses: actions/configure-pages@v4
               with:
-                  # Automatically inject basePath in your Next.js configuration file and disable
-                  # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-                  #
-                  # You may remove this line if you want to manage the configuration yourself.
                   static_site_generator: next
+            - name: Install dependencies
+              run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+            - name: Modify files
+              run: ${{ steps.detect-package-manager.outputs.manager }} run change
+            - name: Build with Next.js
+              run: ${{ steps.detect-package-manager.outputs.runner }} next build
+            # - name: Upload artifact
+            #   uses: actions/upload-pages-artifact@v3
+            #   with:
+            #       #   path: ./out
+            #       path: ./.next
             - name: Restore cache
               uses: actions/cache@v4
               with:
