--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -335,17 +335,6 @@ jobs:
               uses: actions/configure-pages@v4
               with:
                   static_site_generator: next
-            - name: Install dependencies
-              run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-            - name: Modify files
-              run: ${{ steps.detect-package-manager.outputs.manager }} run change
-            - name: Build with Next.js
-              run: ${{ steps.detect-package-manager.outputs.runner }} next build
-            # - name: Upload artifact
-            #   uses: actions/upload-pages-artifact@v3
-            #   with:
-            #       #   path: ./out
-            #       path: ./.next
             - name: Restore cache
               uses: actions/cache@v4
               with:
@@ -358,12 +347,14 @@ jobs:
                       ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
             - name: Install dependencies
               run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+            - name: Modify files
+              run: ${{ steps.detect-package-manager.outputs.manager }} run change
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: ./out
+            # - name: Upload artifact
+            #   uses: actions/upload-pages-artifact@v3
+            #   with:
+            #       path: ./out
 
     # Deployment job
     deploy:
