--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -351,10 +351,10 @@ jobs:
               run: ${{ steps.detect-package-manager.outputs.manager }} run change
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
-            # - name: Upload artifact
-            #   uses: actions/upload-pages-artifact@v3
-            #   with:
-            #       path: ./out
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  path: ./out
 
     # Deployment job
     deploy:
