--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -354,7 +354,8 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./out
+                  #   path: ./out
+                  path: ./.next
 
     # Deployment job
     deploy:
