--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -340,6 +340,7 @@ jobs:
               with:
                   path: |
                       .next/cache
+                      # out/cache
                   # Generate a new cache whenever packages or source files change.
                   key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
                   # If source files changed but packages didn't, rebuild from a prior cache.
@@ -354,8 +355,8 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./out
-                  #   path: ./.next
+                  #   path: ./out
+                  path: ./.next
 
     # Deployment job
     deploy:
