--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -352,6 +352,8 @@ jobs:
               run: ${{ steps.detect-package-manager.outputs.manager }} run change
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
+            - name: Edit build
+              run: ${{ steps.detect-package-manager.outputs.manager }} run static && ${{ steps.detect-package-manager.outputs.manager }} run deploy
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
