--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "next build --debug",
 		"start": "next start",
 		"lint": "next lint",
-		"change": "node build.js"
+		"change": "node build.js",
+		"static": "touch ./.next/.nojekyll && echo 'driptrace.github.io' > ./.next/CNAME",
+		"deploy": "gh-pages -d .next -t true"
 	},
 	"dependencies": {
 		"@million/lint": "1.0.0-rc.13",
