--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -353,7 +353,7 @@ jobs:
             - name: Build with Next.js
               run: ${{ steps.detect-package-manager.outputs.runner }} next build
             - name: Edit build
-              run: ${{ steps.detect-package-manager.outputs.manager }} run static && ${{ steps.detect-package-manager.outputs.manager }} run deploy
+              run: ${{ steps.detect-package-manager.outputs.manager }} run static
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
