--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 # File: .github/workflows/publish.yml
-name: publish-to-github-pages
+name: publish-clinicviews-to-github-pages
 on:
     push:
         branches:
-            - master
+            - manipulate
 
 permissions:
     contents: read
