--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,10 +31,10 @@ jobs:
                   static_site_generator: next
 
             - name: Change and modify
-              run: npm run change && npm run static
+              run: yarn run change && yarn run static
 
             - name: Build with Next.js 🏗️
-              run: npm run build
+              run: yarn run build
 
             - name: Upload artifact 📡
               uses: actions/upload-pages-artifact@v3
