--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,55 +1,55 @@
-# File: .github/workflows/publish.yml
-name: publish-clinicviews-to-github-pages
-on:
-    push:
-        branches:
-            - manipulate
+# # File: .github/workflows/publish.yml
+# name: publish-clinicviews-to-github-pages
+# on:
+#     push:
+#         branches:
+#             - manipulate
 
-permissions:
-    contents: read
-    pages: write
-    id-token: write
+# permissions:
+#     contents: read
+#     pages: write
+#     id-token: write
 
-concurrency:
-    group: "pages"
-    cancel-in-progress: false
+# concurrency:
+#     group: "pages"
+#     cancel-in-progress: false
 
-jobs:
-    build:
-        runs-on: ubuntu-latest
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout 🛎️
-              uses: actions/checkout@v4
+#         steps:
+#             - name: Checkout 🛎️
+#               uses: actions/checkout@v4
 
-            - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
-              uses: ./.github/workflows/setup-node
+#             - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
+#               uses: ./.github/workflows/setup-node
 
-            - name: Setup Pages ⚙️
-              uses: actions/configure-pages@v4
-              with:
-                  static_site_generator: next
+#             - name: Setup Pages ⚙️
+#               uses: actions/configure-pages@v4
+#               with:
+#                   static_site_generator: next
 
-            - name: Change and modify
-              run: yarn run change && yarn run static
+#             - name: Change and modify
+#               run: yarn run change && yarn run static
 
-            - name: Build with Next.js 🏗️
-              run: yarn run build
+#             - name: Build with Next.js 🏗️
+#               run: yarn run build
 
-            - name: Upload artifact 📡
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: ./out
+#             - name: Upload artifact 📡
+#               uses: actions/upload-pages-artifact@v3
+#               with:
+#                   path: ./out
 
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
+#     deploy:
+#         environment:
+#             name: github-pages
+#             url: ${{ steps.deployment.outputs.page_url }}
 
-        runs-on: ubuntu-latest
-        needs: build
+#         runs-on: ubuntu-latest
+#         needs: build
 
-        steps:
-            - name: Publish to GitHub Pages 🚀
-              id: deployment
-              uses: actions/deploy-pages@v4
+#         steps:
+#             - name: Publish to GitHub Pages 🚀
+#               id: deployment
+#               uses: actions/deploy-pages@v4
