--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
 	"editor.wordWrap": "on",
 	"editor.bracketPairColorization.enabled": true,
 	"editor.definitionLinkOpensInPeek": true,
-	"workbench.colorTheme": "Dark Pink",
+	"workbench.colorTheme": "Solarized Light",
 	"editor.cursorBlinking": "expand",
 	"editor.cursorSmoothCaretAnimation": "on",
 	"editor.cursorWidth": 1,
