--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,26 @@
 {
-	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"editor.fontLigatures": true,
-	"editor.fontSize": 17,
-	"editor.fontFamily": "Fira Code",
-	"editor.wordWrap": "on",
-	"editor.bracketPairColorization.enabled": true,
-	"editor.definitionLinkOpensInPeek": true,
-	"workbench.colorTheme": "Solarized Light",
-	"editor.cursorBlinking": "expand",
-	"editor.cursorSmoothCaretAnimation": "on",
-	"editor.cursorWidth": 1,
-	"editor.cursorStyle": "block",
-	"terminal.integrated.cursorBlinking": true,
-	"problems.showCurrentInStatus": true,
-	"editor.codeActionsOnSave": {
-		"source.fixAll": "always"
-		// "source.organizeImports": "always"
-	},
-	"[python]": {
-		"editor.defaultFormatter": "wasm-fmt.wasm-fmt"
-	}
+    "editor.fontLigatures": true,
+    "editor.fontSize": 17,
+    "editor.fontFamily": "Fira Code",
+    "editor.wordWrap": "on",
+    "editor.bracketPairColorization.enabled": true,
+    "editor.definitionLinkOpensInPeek": true,
+    "workbench.colorTheme": "United Ubuntu",
+    "editor.cursorBlinking": "expand",
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.cursorWidth": 1,
+    "editor.cursorStyle": "block",
+    "terminal.integrated.cursorBlinking": true,
+    "problems.showCurrentInStatus": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": "always"
+        // "source.organizeImports": "always"
+    },
+    "[python]": {
+        "editor.defaultFormatter": "wasm-fmt.wasm-fmt"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    }
 }
