checkpoint: pdf attached and sent through exchange\n todo: fix logo import, appointment not being made, patient name and phone number undefined

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@testing-library/react": "^15.0.7",
 		"@testing-library/user-event": "^14.5.2",
 		"amqplib": "^0.10.4",
+		"archiver": "^7.0.1",
 		"bootstrap": "^5.3.3",
 		"browser": "link:@serwist/next/browser",
 		"datatables.net": "^2.0.8",
@@ -46,6 +47,7 @@
 		"jquery": "^3.7.1",
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^3.8.2",
+		"jszip": "^3.10.1",
 		"lru-cache": "^10.2.2",
 		"lucide-react": "^0.396.0",
 		"million": "^3.1.6",
@@ -114,6 +116,7 @@
 		"@types/ace": "^0.0.52",
 		"@types/amqplib": "^0.10.5",
 		"@types/angular": "^1.8.9",
+		"@types/archiver": "^6.0.2",
 		"@types/babel__traverse": "^7.20.6",
 		"@types/bootstrap": "^5.2.10",
 		"@types/estree": "^1.0.5",
