--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
 		"vercel": "^34.2.7",
 		"vite": "^5.2.12",
 		"web-vitals": "^4.0.1",
-		"wordcloud": "^1.2.2"
+		"wordcloud": "^1.2.2",
+		"xoauth2": "^1.2.0"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^18.0.2",
