--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@million/lint": "1.0.0-rc.13",
+		"@react-three/drei": "^9.108.2",
+		"@react-three/fiber": "^8.16.8",
 		"@reduxjs/toolkit": "^2.2.5",
 		"@sendgrid/mail": "^8.1.3",
 		"@serwist/build": "^9.0.3",
@@ -81,6 +83,7 @@
 		"survey-pdf": "latest",
 		"survey-react-ui": "latest",
 		"tabulator-tables": "^6.2.1",
+		"three": "^0.166.1",
 		"vercel": "^34.2.7",
 		"vite": "^5.2.12",
 		"web-vitals": "^4.0.1",
