--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev -p 2999",
+        "sim": "chmod +x ./scripts/start-dev-servers.sh && sh ./scripts/start-dev-servers.sh",
+        "dev": "next dev",
+        "dev:driptrace": "next dev -p 42069",
+        "dev:llpmg": "next dev -p 65535",
+        "dev:fsclinicals": "next dev -p 4",
+        "split": "chmod +x ./scripts/split.sh && sh ./scripts/split.sh",
         "build": "next build --debug",
         "start": "next start",
         "lint": "next lint",
