--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
         "dev:llpmg": "next dev -p 65535",
         "dev:fsclinicals": "next dev -p 4",
         "split": "chmod +x ./scripts/split.sh && sh ./scripts/split.sh",
-        "build": "next build --debug",
+        "build": "next build --debug && yarn run change",
         "start": "next start",
         "lint": "next lint",
         "change": "node build.js",
         "static": "touch ./.next/.nojekyll && echo 'driptrace.github.io' > ./.next/CNAME",
-        "deploy": "gh-pages -d .next -t true"
+        "deploy": "gh-pages -d .next -t true",
+        "stripe:webhook:dev:local": "stripe listen --forward-to localhost:3001/api/stripe/webhook/route",
+        "stripe:webhook:dev:remote": "stripe listen --forward-to https://dev.driptracecom/api/stripe/webhook/route"
     },
     "dependencies": {
         "@microsoft/microsoft-graph-client": "^3.0.7",
@@ -31,6 +33,8 @@
         "@serwist/sw": "^9.0.3",
         "@serwist/webpack-plugin": "^9.0.3",
         "@serwist/window": "^9.0.3",
+        "@stripe/react-stripe-js": "^2.7.3",
+        "@stripe/stripe-js": "^4.1.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
@@ -82,6 +86,7 @@
         "signature_pad": "^5.0.1",
         "slick-carousel": "^1.8.1",
         "sortablejs": "^1.15.2",
+        "stripe": "^16.2.0",
         "survey-analytics": "latest",
         "survey-core": "latest",
         "survey-creator-core": "latest",
