--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "formidable": "^3.5.1",
         "framer-motion": "^11.2.11",
         "glob": "^10.4.2",
+        "ical-generator": "^7.1.0",
         "jquery": "^3.7.1",
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.8.2",
