--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@react-three/drei": "^9.108.2",
         "@react-three/fiber": "^8.16.8",
         "@reduxjs/toolkit": "^2.2.5",
+        "@ringcentral/sdk": "^5.0.2",
         "@sendgrid/mail": "^8.1.3",
         "@serwist/build": "^9.0.3",
         "@serwist/cli": "^9.0.3",
@@ -76,7 +77,9 @@
         "plotly.js-dist-min": "^2.33.0",
         "qunitjs": "^2.4.1",
         "react": "^18.3.1",
+        "react-datepicker": "^7.3.0",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.52.2",
         "react-icons": "^5.2.1",
         "react-redux": "^9.1.2",
         "react-slick": "^0.30.2",
