--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
         "@types/react-slick": "^0.23.13",
         "@types/react-test-renderer": "^18.3.0",
         "@types/signature_pad": "^2.3.6",
+        "@types/uuid": "^10.0.0",
         "@types/wordcloud": "^1.2.2",
         "@typescript-eslint/eslint-plugin": "^7.11.0",
         "@typescript-eslint/parser": "^7.11.0",
