--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
+        "@wix/api-client": "^1.12.12",
+        "@wix/data": "^1.0.137",
         "amqplib": "^0.10.4",
         "archiver": "^7.0.1",
         "bootstrap": "^5.3.3",
@@ -59,6 +61,7 @@
         "glob": "^10.4.2",
         "ical-generator": "^7.1.0",
         "jquery": "^3.7.1",
+        "js-cookies": "^1.0.4",
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.8.2",
         "jszip": "^3.10.1",
@@ -102,6 +105,7 @@
         "vercel": "^34.2.7",
         "vite": "^5.2.12",
         "web-vitals": "^4.0.1",
+        "wix-data": "^0.0.1-security",
         "wordcloud": "^1.2.2",
         "xoauth2": "^1.2.0"
     },
