--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "editor.wordWrap": "on",
     "editor.bracketPairColorization.enabled": true,
     "editor.definitionLinkOpensInPeek": true,
-    "workbench.colorTheme": "Xeon Light",
+    "workbench.colorTheme": "Default High Contrast Light",
     "editor.cursorBlinking": "expand",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.cursorWidth": 1,
