--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-    "extends": "next/core-web-vitals"
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-undef": "off",
+        "no-unused-vars": "off"
+    }
 }
 
 // {
