--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
+        // "moduleResolution": "node",  // Changed to "node"
         "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
@@ -42,7 +43,13 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "src/types",
-        "out/types/**/*.ts"
+        "out/types/**/*.ts",
+        "src/**/*.ts", // Make sure it includes only relevant files
+        "src/**/*.tsx" // Include TypeScript and JSX files
     ],
-    "exclude": ["node_modules", "surveyjs-core/*"]
+    "exclude": [
+        "node_modules",
+        "surveyjs-core/*",
+        "**/*.test.ts" // Add test exclusions
+    ]
 }
