--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,27 @@
 {
-    "extends": "next/core-web-vitals",
     "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "no-undef": "off",
         "no-unused-vars": "off"
-    }
+    },
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "plugins": ["@typescript-eslint"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "next/core-web-vitals"
+    ]
 }
 
 // {
