--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,10 +41,5 @@
         "src/**/*.ts",
         "src/**/*.tsx"
     ],
-    "exclude": [
-        "node_modules",
-        "surveyjs-core/*",
-        "**/*.test.ts",
-        "src/ref/embed/*"
-    ]
+    "exclude": ["node_modules", "surveyjs-core/*", "**/*.test.ts"]
 }
