--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "formidable": "^3.5.1",
         "framer-motion": "^11.2.11",
         "glob": "^10.4.2",
+        "gsap": "^3.12.5",
         "ical-generator": "^7.1.0",
         "idb": "^8.0.0",
         "isomorphic-fetch": "^3.0.0",
