--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "dev:driptrace": "next dev -p 42069",
         "dev:llpmg": "next dev -p 65535",
         "dev:fsclinicals": "next dev -p 4",
-        "dev:accessmentalhealth": "next dev -p 49152",
+        "dev:accessmentalhealth": "next dev -p 42690",
         "split": "chmod +x ./scripts/split.sh && sh ./scripts/split.sh",
         "build": "next build --debug && yarn run change",
         "start": "next start",
@@ -140,6 +140,7 @@
         "next-connect": "^1.0.0",
         "next-pwa": "^5.6.0",
         "next-redux-wrapper": "^8.1.0",
+        "next-themes": "^0.3.0",
         "node-fetch": "^3.3.2",
         "node-interval-tree": "^2.1.2",
         "nodemailer": "^6.9.14",
